1998-10-11  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* gnobots.c(main): Replaced 'gnome_client_new_default' with
 	'gnome_master_client' call.  Enabled setting the current directory.

Thu Sep 24 06:48:19 BST 1998 Mark Rae <Mark.Rae@ed.ac.uk>

        * gnobots.c  - Fixed Help Menu

Sat Aug 29 14:39:53 BST 1998 Mark Rae <Mark.Rae@ed.ac.uk>

        * gnobots.c  - Fixed problems when screen becomes too full of robots
        * game.c     - Game now 'wraps around' back to the start with
        * gbdefs.h   - the starting number of robots, after displaying
        * index.html - a congratulatory message

Tue Jul 28 19:40:06 BST 1998 Mark Rae <Mark.Rae@ed.ac.uk>

        * gnobots.c  - Allowed 'Space' key to start a new game
                     - Added confirmation dialog if new game is selected
                       while game is in progress
        * index.html - Changed instructions for space key change

1998-07-24  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

        * gnobots.desktop: Added Portuguese translation.
	
        * .cvsignore: New file. Added `Makefile.in'.
	
Thu Jul 16 19:16:20 BST 1998 Mark Rae <Mark.Rae@ed.ac.uk>

        * gnobots.c - Fixed 'S' key

Fri Jul  3 18:35:10 BST 1998 Mark Rae <Mark.Rae@ed.ac.uk>

        * gnobots.c  - Fixed timeout_cb function to return TRUE
        * gnobots.c  - Allowed player to choose random teleports
        * index.html - Changed instructions for random teleports

Wed Jul  1 20:53:47 BST 1998 Mark Rae <Mark.Rae@ed.ac.uk>

        * gnobots.c - Fixed problem with  non-TrueColor visuals