@@ -1,3 +1,8 @@
+Thu Nov 19  Richard Hestilow  <hestgray@ionet.net>
+
+	* gnobots.c: Added underscore accelerators for menus. Also do not 
+	right justify Help menu any more.
+
 1998-10-11  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>
 
 	* gnobots.c(main): Replaced 'gnome_client_new_default' with
